--- a/app.css
+++ b/app.css
@@ -15,6 +15,8 @@
     justify-content: center;
 }
 
-.form {
-    align-items: center;
-}
+div{
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+    }
